src/index.css
/* tailwind.css */
@tailwind base;
@tailwind components;
@tailwind utilities;

@keyframes fade {
   0%,
   100% {
      opacity: 1;
   }
   60% {
      opacity: 0;
   }
}

.animate-fade {
   animation: fade 1s ease-in-out infinite;
}

.animation-delay-300 {
   animation-delay: 0.33s;
}

.animation-delay-600 {
   animation-delay: 0.66s;
}

.masonry-grid {
   column-count: 3;
   column-gap: 1rem;
}

@media (max-width: 768px) {
   .masonry-grid {
      column-count: 2;
   }
}

.masonry-item {
   break-inside: avoid;
   margin-bottom: 1rem;
}

.dropdown-menu {
   z-index: 1000;
   position: absolute;
   width: 12rem;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
   overflow: hidden;
}

.input {
   /* background-color: #f4f4f4; */
   border: none;
   border-radius: 0.5rem;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
   /* color: #333; */
   font-family: "Helvetica Neue", sans-serif;
   font-size: 1rem;
   padding: 0.5rem;
   width: 100%;
   max-width: 20rem;
   height: 2.5rem;
   line-height: 2rem;
   outline: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   transition: background-color 0.3s ease-in-out;
}

.input:focus {
   background-color: #eaeaea;
}

.input:disabled {
   background-color: #dadada;
   color: #a3a3a3;
}

.input:read-only {
   background-color: #f4f4f4;
   color: #a3a3a3;
   cursor: not-allowed;
}

/* dark mode toggle button */

/* The switch - the box around the slider */
.switch-container {
   position: relative;
   display: block;
   width: 2.5rem;
   height: 1.4rem;
}

/* Hide default HTML checkbox */
.switch-container input {
   opacity: 0;
   width: 0;
   height: 0;
}

/* The slider */
.switch-container .slider {
   --background: linear-gradient(to right, #5b5b5bef, #474747);
   position: absolute;
   cursor: pointer;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background: var(--background);
   transition: background-color 0.5s;
   border-radius: 2rem;
}

.switch-container .slider:before {
   position: absolute;
   content: "";
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
   left: 10%;
   bottom: 15%;
   box-shadow: inset 15px -4px 0px 15px #f8ea27;
   background: var(--background);
   transition: transform 0.5s, box-shadow 0.5s;
}

.switch-container input:checked + .slider {
   background-color: #5d5d5d;
}

.switch-container input:checked + .slider:before {
   transform: translateX(100%);
   box-shadow: inset 8px -4px 0px 0px #f8f8f4;
}

